# cinema-django

./: .gitignore  README.md  pyproject.toml
cinema/: settings.py  urls.py
cinema/apps/notificacoes/: services.py
cinema/apps/salas/: apps.py  services.py
cinema/cli/management/commands/: reservar_sala.py
cinema/restapi/v1/: router.py
cinema/restapi/v1/viewsets/: reservas.py
cinema/usecases/: reservas.py
docs/: apresentacao.ipynb
tests/: test_cinema.py
